--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,9 @@ ${DIR_SRCS}
 
 ADD_EXECUTABLE(${PROJECT_NAME} ${MAIN_SRC})
 
-if(CMAKE_COMPILER_IS_GNUCXX)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lev")
-	message(STATUS "optional:-std=c++11")
-endif(CMAKE_COMPILER_IS_GNUCXX)
+#if(CMAKE_COMPILER_IS_GNUCXX)
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lev")
+#	message(STATUS "optional:-std=c++11")
+#endif(CMAKE_COMPILER_IS_GNUCXX)
 
-target_link_libraries(ss-manager -lev)
+target_link_libraries(ss-manager -lev -lm)
