--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ ${DIR_SRCS}
 )
 
 ADD_EXECUTABLE(${PROJECT_NAME} ${MAIN_SRC})
-
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 #if(CMAKE_COMPILER_IS_GNUCXX)
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lev")
 #	message(STATUS "optional:-std=c++11")
