--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,9 @@ INCLUDE_DIRECTORIES(
 
 AUX_SOURCE_DIRECTORY(src DIR_SRCS)
 
-SET(MAIN_SRC
-${DIR_SRCS}
-)
+set(SRC_PATH src)
 
-ADD_EXECUTABLE(${PROJECT_NAME} ${MAIN_SRC})
+ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_PATH}/ssman_db.c ${SRC_PATH}/utils.c)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 #if(CMAKE_COMPILER_IS_GNUCXX)
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lev")
